"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-01-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-24:
	  prsim: bug fix: mistakenly enqueued weak-rules that should've
		been ignored due to strong rules overpowering.
		also hoisated some pull-evaluation code above conditionals.
	  Updated some test cases, and added new ones for this fix.


2008-01-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-23:
	  by request, prsim mode: echo-commands [on|off]
		print each line as it is interpreted (with #), 
		and also traces recursively sourced scripts.  
	  also added to chpsim
	  documented (texinfo).


	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-22:
	  Tiny fix: Event-prsim.cc free-list check-sum argument explicitly
		cast to size_t to avoid overflow problems in 64b mode.  
	  No test case added.  :-/


2008-01-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-21:
	  hacprsim: fixed stuck-node case, by allowing pending X events
		to be overridden or killed in the unstable-dequeue mode, 
		intended for synchronous-mode circuit simulations.  
	  Added new test case to demonstrate difference between these modes.


2008-01-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-20:
	  Clean-up: factor inline function get_pull() for maintainability
		and comprehensibility, no real source revision.


2008-01-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-19:
	  By request, mode switch to disable (ignore) all weak rules, 
		which is the default, or enable them.
		command: weak-rules [on|off]
	  Documented in dox/prsim, and basically tested.
		Old tests updated (script +"weak-rules on"), 