@@ -2,7 +2,7 @@
 	\file "sim/command_common.tcc"
 	Library of template command implementations, re-usable with
 	different state types.  
-	$Id: command_common.tcc,v 1.6.10.1 2008/01/12 22:59:41 fang Exp $
+	$Id: command_common.tcc,v 1.6.10.2 2008/01/14 19:38:09 fang Exp $
  */
 
 #ifndef	__HAC_SIM_COMMAND_COMMON_TCC__
@@ -620,7 +620,7 @@ template <class State>
 void
 WatchQueue<State>::usage(ostream& o) {
 	o << "watch-queue" << endl;
-	o << "Print events as they are inserted into the event queue."
+	o << "Print events on watched nodes only as they enter the event queue."
 		<< endl;
 }
 
@@ -644,6 +644,54 @@ template <class State>
 void
 NoWatchQueue<State>::usage(ostream& o) {
 	o << "nowatch-queue" << endl;
+	o << "Silence events on watched nodes as they enter the event queue."
+		<< endl;
+}
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+INITIALIZE_COMMON_COMMAND_CLASS(WatchAllQueue, "watchall-queue",
+	"print each event as it is enqueued into the event queue")
+
+template <class State>
+int
+WatchAllQueue<State>::main(state_type& s, const string_list& a) {
+if (a.size() != 1) {
+	usage(cerr << "usage: ");
+	return command_type::SYNTAX;
+} else {
+	s.watchall_event_queue();
+	return command_type::NORMAL;
+}
+}
+
+template <class State>
+void
+WatchAllQueue<State>::usage(ostream& o) {
+	o << "watchall-queue" << endl;
+	o << "Print all events as they are inserted into the event queue."
+		<< endl;
+}
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+INITIALIZE_COMMON_COMMAND_CLASS(NoWatchAllQueue, "nowatchall-queue",
+	"silence enqueuing into the event queue (default)")
+
+template <class State>
+int
+NoWatchAllQueue<State>::main(state_type& s, const string_list& a) {
+if (a.size() != 1) {
+	usage(cerr << "usage: ");
+	return command_type::SYNTAX;
+} else {
+	s.nowatchall_event_queue();
+	return command_type::NORMAL;
+}
+}
+
+template <class State>
+void
+NoWatchAllQueue<State>::usage(ostream& o) {
+	o << "nowatchall-queue" << endl;
 	o << "Silence events as they are inserted into the event queue."
 		<< endl;
 }
