@@ -1,11 +1,11 @@
 # "arbitrate-loop-a-03.chpsimrc
-#	$Id: arbitrate-loop-a-03.chpsimrc,v 1.2 2007/02/05 06:40:04 fang Exp $
+#	$Id: arbitrate-loop-a-03.chpsimrc,v 1.2.42.1 2008/01/14 19:38:23 fang Exp $
 # @haco@ arbitrate-loop-a.haco-a
 
 echo testing random delays
 echo events are silent
 nowatchall-events
-nowatch-queue
+nowatchall-queue
 timing random
 step 9999
 assert-queue
